welcome.lessons.welcome.bat.bool1.IcyHot.scala.error
icyHot:10: error: unclosed comment
/**	}else if(temp1<=0 && temp2=100 ||temp1=100 && temp2<=0){
^icyHot:1: error: Missing closing brace `}' assumed here
def icyHot(temp1:Int, temp2:Int):Boolean = {
^